# avirdigital

./: .gitignore  Pipfile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: django.yml
about/: admin.py  models.py
about/migrations/: 0001_initial.py  0002_about_icon.py
avirdigital/: forms.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
avirdigital/templatetags/: stuff.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20190405_0826.py  0003_auto_20190405_0833.py  0004_auto_20190405_0850.py
blog/tests/: view_tests.py
page/: admin.py  models.py  urls.py  views.py
page/migrations/: 0001_initial.py  0002_page_image.py  0003_remove_page_image.py
partners/: models.py
partners/migrations/: 0001_initial.py  0002_auto_20190408_1040.py  0002_auto_20200517_0130.py  0003_partner_portfolio.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_auto_20190329_0819.py  0003_auto_20190329_0819.py  0004_portfolio_image.py  0005_auto_20190329_1035.py  0006_auto_20190402_0814.py  0007_auto_20190402_0815.py  0008_auto_20190402_0820.py  0009_auto_20190402_0820.py  0010_auto_20190402_1006.py  0011_auto_20190404_0708.py  0012_portfolio_customer.py  0013_portfolio_date.py  0014_portfolio_position.py  0015_auto_20190409_0745.py  (+2 more)
services/: admin.py  models.py  urls.py  views.py
staticfiles/: staticfiles.json  style.css
templates/: about.html  contact.html  index.html  mailru-domaindImcPxrKGJBOVG1T.html  main.html
(+42 files in other folders)
