[tool]
[tool.poetry]
name = "avirdigital"
version = "1.0.1"
description = "Avirdigital website"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "==3.7"
certifi = ">=2020.4.5.1"
chardet = ">=3.0.4"
dephell = "*"
dj-database-url = ">=0.5.0"
django = "*"
django-ckeditor = ">=5.6.1"
django-filer = ">=1.7.1"
django-heroku = ">=0.3.1"
django-js-asset = ">=1.2.2"
django-linguist = ">=0.5.0"
django-modeltranslation = ">=0.15"
django-mptt = ">=0.11.0"
django-polymorphic = ">=2.1.2"
django-rosetta = ">=0.9.4"
django-translations = ">=1.1.2"
django-widget-tweaks = ">=1.4.8"
easy-thumbnails = ">=2.7"
gunicorn = ">=20.0.4"
heroku = ">=0.1.4"
idna = ">=2.8"
pillow = ">=7.1.2"
polib = ">=1.1.0"
psycopg2 = ">=2.7.7"
pytest-django = "*"
pytz = ">=2018.9"
requests = ">=2.21.0"
six = ">=1.12.0"
tox = "*"
unidecode = ">=1.1.1"
urllib3 = ">=1.24.1"
whitenoise = ">=4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
